modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -3,84 +3,89 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Six’0 | Portfolio</title>
+    <title>Six’0 | Digital Hub</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;500;700&family=Syne:wght@400;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;700&family=Syne:wght@700;800&display=swap" rel="stylesheet">
 </head>
 <body>
 
-    <div class="glow-bg"></div>
+    <div class="bg-lines"></div>
+    <div class="bg-gradient"></div>
 
-    <div class="wrapper">
-        <aside class="sidebar">
-            <div class="profile-frame">
-                <img src="https://images.unsplash.com/photo-1618336753974-aae8e04506aa?q=80&w=1000&auto=format&fit=crop" alt="Six'0" class="profile-img">
+    <div class="container">
+        <header class="hero">
+            <div class="avatar-container">
+                <img src="six0-char.png" alt="Six’0 Character" class="avatar" onerror="this.src='https://via.placeholder.com/150/222/fff?text=Six0'">
             </div>
-            <h1 class="name">Six’0</h1>
-            <p class="subtitle">Digital Creative & Explorer</p>
+            <h1 class="glitch-name">Six’0</h1>
+            <p class="tag">Digital Creative & Explorer</p>
+        </header>
+
+        <section class="glass-box about">
+            <h2>The Identity</h2>
+            <p>Hey — I’m <strong>Six’0</strong>. I’m a digital creative driven by curiosity, self-expression, and the need to constantly evolve. I live at the intersection of technology, art, music, and online culture.</p>
+            <p>I don’t believe in static identities. I believe in growth, exploration, and being unapologetically real. This space is a reflection of that mindset.</p>
+        </section>
+
+        <section class="link-hub">
+            <h2 class="section-title">Navigation Hub</h2>
             
-            <div class="social-fast-links">
-                <a href="https://linktr.ee/BrianGunar" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
-                <a href="https://linktr.ee/BrianGunar" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                <a href="https://linktr.ee/BrianGunar" target="_blank"><i class="fa-brands fa-discord"></i></a>
+            <div class="links-grid">
+                <a href="https://www.instagram.com/briangunar" target="_blank" class="nav-card insta">
+                    <i class="fa-brands fa-instagram"></i>
+                    <div class="nav-text">
+                        <h3>Instagram</h3>
+                        <span>Photography & Aesthetic</span>
+                    </div>
+                </a>
+
+                <a href="https://twitter.com/briangunar" target="_blank" class="nav-card twitter">
+                    <i class="fa-brands fa-x-twitter"></i>
+                    <div class="nav-text">
+                        <h3>Twitter / X</h3>
+                        <span>Thoughts & Tech Updates</span>
+                    </div>
+                </a>
+
+                <a href="https://discord.gg/yourlink" target="_blank" class="nav-card discord">
+                    <i class="fa-brands fa-discord"></i>
+                    <div class="nav-text">
+                        <h3>Discord</h3>
+                        <span>Community & Hangout</span>
+                    </div>
+                </a>
+
+                <a href="https://github.com/briangunar" target="_blank" class="nav-card github">
+                    <i class="fa-brands fa-github"></i>
+                    <div class="nav-text">
+                        <h3>GitHub</h3>
+                        <span>Code & Experiments</span>
+                    </div>
+                </a>
+
+                <a href="https://spotify.com" target="_blank" class="nav-card spotify">
+                    <i class="fa-brands fa-spotify"></i>
+                    <div class="nav-text">
+                        <h3>Spotify</h3>
+                        <span>Current Mood & Playlists</span>
+                    </div>
+                </a>
+
+                <a href="mailto:your@email.com" class="nav-card email">
+                    <i class="fa-solid fa-envelope"></i>
+                    <div class="nav-text">
+                        <h3>Contact</h3>
+                        <span>Let's collaborate</span>
+                    </div>
+                </a>
             </div>
-        </aside>
+        </section>
 
-        <main class="main-content">
-            <section class="glass-section">
-                <h2>About Me</h2>
-                <p>Hey — I’m <strong>Six’0</strong>. I’m a digital creative driven by curiosity, self-expression, and the need to constantly evolve. I live at the intersection of technology, art, music, and online culture.</p>
-                <p>You’ll find me creating, experimenting, and engaging — whether that’s sharing moments on social media, building and breaking things in code, vibing to music, or hanging out with my community.</p>
-                <blockquote class="accent-quote">
-                    "I don’t believe in static identities. I believe in growth, exploration, and being unapologetically real."
-                </blockquote>
-            </section>
-
-            <section class="glass-section">
-                <h2>The Vibe</h2>
-                <p>I’m someone who learns by doing and questions everything. I’m deeply interested in how people think, feel, and connect, which pulls me toward psychology and expressive art forms. Music is the atmosphere of my identity, and I'm inspired by worlds that blur the line between reality and imagination.</p>
-            </section>
-
-            <section class="link-hub">
-                <h2>Connect & Explore</h2>
-                <div class="grid">
-                    <a href="https://linktr.ee/BrianGunar" class="link-item">
-                        <i class="fa-solid fa-code"></i>
-                        <div class="link-info">
-                            <h3>Development</h3>
-                            <span>Check out my code & projects</span>
-                        </div>
-                    </a>
-                    <a href="https://linktr.ee/BrianGunar" class="link-item">
-                        <i class="fa-solid fa-music"></i>
-                        <div class="link-info">
-                            <h3>Atmosphere</h3>
-                            <span>The music that drives my soul</span>
-                        </div>
-                    </a>
-                    <a href="https://linktr.ee/BrianGunar" class="link-item">
-                        <i class="fa-solid fa-users"></i>
-                        <div class="link-info">
-                            <h3>Community</h3>
-                            <span>Join the conversation on Discord</span>
-                        </div>
-                    </a>
-                    <a href="https://linktr.ee/BrianGunar" class="link-item">
-                        <i class="fa-solid fa-camera-retro"></i>
-                        <div class="link-info">
-                            <h3>Identity</h3>
-                            <span>Moments and visual storytelling</span>
-                        </div>
-                    </a>
-                </div>
-            </section>
-
-            <footer class="final-note">
-                <p>This isn’t just a website. It’s a snapshot of who I am right now.</p>
-                <span class="sign-off">— Six’0</span>
-            </footer>
-        </main>
+        <footer class="footer">
+            <p>This isn't just a website. It's a snapshot of who I am right now.</p>
+            <div class="signature">— Six’0</div>
+        </footer>
     </div>
 
 </body>
