--- a/index.html
+++ b/index.html
@@ -2,86 +2,227 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <title>BrianGunar | About Me</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Six’0 | Portfolio</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;500;700&family=Syne:wght@400;700;800&display=swap" rel="stylesheet">
+
+    <style>
+        /* ===== GLOBAL ===== */
+        @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=JetBrains+Mono:wght@300;400;700&display=swap');
+
+        :root {
+            --bg: #0a0a0f;
+            --bg2: #12121a;
+            --accent: #00ffe1;
+            --accent2: #7a5cff;
+            --text: #e6f1ff;
+            --muted: #8892b0;
+            --card: rgba(20,20,30,0.6);
+            --border: rgba(0,255,225,0.2);
+        }
+
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'JetBrains Mono', monospace;
+            background: radial-gradient(circle at 20% 20%, #141427, #050508);
+            color: var(--text);
+            overflow-x: hidden;
+        }
+
+        /* Animated background */
+        body::before {
+            content: "";
+            position: fixed;
+            width: 200%;
+            height: 200%;
+            background: linear-gradient(45deg,
+                transparent,
+                rgba(0,255,225,0.03),
+                transparent,
+                rgba(122,92,255,0.03),
+                transparent);
+            animation: moveBg 20s linear infinite;
+            z-index: -1;
+        }
+
+        @keyframes moveBg {
+            0% { transform: translate(0,0); }
+            100% { transform: translate(-25%, -25%); }
+        }
+
+        /* ===== HERO ===== */
+        .hero {
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+        }
+
+        .name {
+            font-family: 'Orbitron', sans-serif;
+            font-size: 3rem;
+            background: linear-gradient(90deg, var(--accent), var(--accent2));
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            text-shadow: 0 0 20px rgba(0,255,225,0.4);
+            animation: glow 3s ease-in-out infinite alternate;
+        }
+
+        @keyframes glow {
+            from { text-shadow: 0 0 10px var(--accent); }
+            to { text-shadow: 0 0 30px var(--accent2); }
+        }
+
+        .tagline {
+            margin-top: 15px;
+            color: var(--muted);
+            font-size: 1.1rem;
+        }
+
+        .button {
+            margin-top: 30px;
+            padding: 12px 28px;
+            border: 1px solid var(--accent);
+            border-radius: 8px;
+            text-decoration: none;
+            color: var(--accent);
+            transition: 0.3s;
+            position: relative;
+        }
+
+        .button:hover {
+            background: var(--accent);
+            color: black;
+            box-shadow: 0 0 20px var(--accent);
+        }
+
+        /* ===== SECTION ===== */
+        .section {
+            padding: 80px 20px;
+            max-width: 900px;
+            margin: auto;
+        }
+
+        .card {
+            background: var(--card);
+            border: 1px solid var(--border);
+            border-radius: 12px;
+            padding: 25px;
+            margin-bottom: 25px;
+            backdrop-filter: blur(10px);
+            transition: 0.3s;
+        }
+
+        .card:hover {
+            transform: translateY(-5px);
+            border-color: var(--accent);
+            box-shadow: 0 0 25px rgba(0,255,225,0.2);
+        }
+
+        .title {
+            font-family: 'Orbitron', sans-serif;
+            margin-bottom: 10px;
+            color: var(--accent);
+        }
+
+        .skills {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+            margin-top: 10px;
+        }
+
+        .skill {
+            padding: 6px 12px;
+            border: 1px solid var(--accent2);
+            border-radius: 6px;
+            font-size: 0.9rem;
+            color: var(--accent2);
+        }
+
+        /* Footer */
+        footer {
+            text-align: center;
+            padding: 30px;
+            color: var(--muted);
+            font-size: 0.8rem;
+        }
+
+        /* Responsive */
+        @media (max-width: 600px) {
+            .name {
+                font-size: 2rem;
+            }
+        }
+
+    </style>
 </head>
 <body>
 
-    <div class="glow-bg"></div>
-
-    <div class="wrapper">
-        <aside class="sidebar">
-            <div class="profile-frame">
-                <img src="https://images.unsplash.com/photo-1618336753974-aae8e04506aa?q=80&w=1000&auto=format&fit=crop" alt="Six'0" class="profile-img">
-            </div>
-            <h1 class="name">Six’0</h1>
-            <p class="subtitle">Digital Creative & Explorer</p>
-            
-            <div class="social-fast-links">
-                <a href="https://linktr.ee/BrianGunar" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
-                <a href="https://linktr.ee/BrianGunar" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                <a href="https://linktr.ee/BrianGunar" target="_blank"><i class="fa-brands fa-discord"></i></a>
-            </div>
-        </aside>
-
-        <main class="main-content">
-            <section class="glass-section">
-                <h2>About Me</h2>
-                <p>Hey — I’m <strong>Six’0</strong>. I’m a digital creative driven by curiosity, self-expression, and the need to constantly evolve. I live at the intersection of technology, art, music, and online culture.</p>
-                <p>You’ll find me creating, experimenting, and engaging — whether that’s sharing moments on social media, building and breaking things in code, vibing to music, or hanging out with my community.</p>
-                <blockquote class="accent-quote">
-                    "I don’t believe in static identities. I believe in growth, exploration, and being unapologetically real."
-                </blockquote>
-            </section>
-
-            <section class="glass-section">
-                <h2>The Vibe</h2>
-                <p>I’m someone who learns by doing and questions everything. I’m deeply interested in how people think, feel, and connect, which pulls me toward psychology and expressive art forms. Music is the atmosphere of my identity, and I'm inspired by worlds that blur the line between reality and imagination.</p>
-            </section>
-
-            <section class="link-hub">
-                <h2>Connect & Explore</h2>
-                <div class="grid">
-                    <a href="https://linktr.ee/BrianGunar" class="link-item">
-                        <i class="fa-solid fa-code"></i>
-                        <div class="link-info">
-                            <h3>Development</h3>
-                            <span>Check out my code & projects</span>
-                        </div>
-                    </a>
-                    <a href="https://linktr.ee/BrianGunar" class="link-item">
-                        <i class="fa-solid fa-music"></i>
-                        <div class="link-info">
-                            <h3>Atmosphere</h3>
-                            <span>The music that drives my soul</span>
-                        </div>
-                    </a>
-                    <a href="https://linktr.ee/BrianGunar" class="link-item">
-                        <i class="fa-solid fa-users"></i>
-                        <div class="link-info">
-                            <h3>Community</h3>
-                            <span>Join the conversation on Discord</span>
-                        </div>
-                    </a>
-                    <a href="https://linktr.ee/BrianGunar" class="link-item">
-                        <i class="fa-solid fa-camera-retro"></i>
-                        <div class="link-info">
-                            <h3>Identity</h3>
-                            <span>Moments and visual storytelling</span>
-                        </div>
-                    </a>
-                </div>
-            </section>
-
-            <footer class="final-note">
-                <p>This isn’t just a website. It’s a snapshot of who I am right now.</p>
-                <span class="sign-off">— Six’0</span>
-            </footer>
-        </main>
+    <div class="hero">
+        <div class="name">BrianGunar</div>
+        <div class="tagline">System Builder • Hacker-Mindset Developer • AI Explorer</div>
+        <a href="https://linktr.ee/BrianGunar" class="button" target="_blank">Access Network</a>
     </div>
+
+    <div class="section">
+
+        <div class="card">
+            <div class="title">// identity</div>
+            <p>
+                Tech-driven builder focused on creating systems, experimenting with AI, and pushing hardware beyond intended limits.
+                Operating at the intersection of software engineering, system architecture, and experimental computing.
+                <br><br>
+                Known for building portable servers, running custom AI locally, and engineering unconventional solutions.
+            </p>
+        </div>
+
+        <div class="card">
+            <div class="title">// capabilities</div>
+            <div class="skills">
+                <div class="skill">Arch Linux</div>
+                <div class="skill">System Engineering</div>
+                <div class="skill">AI Integration</div>
+                <div class="skill">Python</div>
+                <div class="skill">C / Low-Level</div>
+                <div class="skill">Linux Internals</div>
+                <div class="skill">Raspberry Pi</div>
+                <div class="skill">Automation</div>
+                <div class="skill">Reverse Engineering</div>
+                <div class="skill">Custom Tooling</div>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="title">// current focus</div>
+            <p>
+                ▸ Building experimental AI systems with persistent memory<br>
+                ▸ Developing immersive simulation environments<br>
+                ▸ Creating efficient and autonomous computing setups<br>
+                ▸ Exploring system-level optimization and hybrid architectures
+            </p>
+        </div>
+
+        <div class="card">
+            <div class="title">// philosophy</div>
+            <p>
+                "Understand the system. Control the system. Become the system."
+                <br><br>
+                Every layer is an opportunity — from hardware signals to high-level intelligence.
+            </p>
+        </div>
+
+    </div>
+
+    <footer>
+        signal_id: BrianGunar | status: online
+    </footer>
 
 </body>
 </html>
