modified:   index.html

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
     <div class="hero">
         <div class="name">BrianGunar</div>
-        <div class="tagline">System Builder • Hacker-Mindset Developer • AI Explorer</div>
+        <div class="tagline">System Builder • Hacker‑Mindset Developer • AI Explorer</div>
         <a href="https://linktr.ee/BrianGunar" class="button" target="_blank">Access Network</a>
     </div>
 
@@ -176,7 +176,7 @@
         <div class="card">
             <div class="title">// identity</div>
             <p>
-                Tech-driven builder focused on creating systems, experimenting with AI, and pushing hardware beyond intended limits.
+                Tech‑driven builder focused on creating systems, experimenting with AI, and pushing hardware beyond intended limits.
                 Operating at the intersection of software engineering, system architecture, and experimental computing.
                 <br><br>
                 Known for building portable servers, running custom AI locally, and engineering unconventional solutions.
@@ -190,7 +190,7 @@
                 <div class="skill">System Engineering</div>
                 <div class="skill">AI Integration</div>
                 <div class="skill">Python</div>
-                <div class="skill">C / Low-Level</div>
+                <div class="skill">C / Low‑Level</div>
                 <div class="skill">Linux Internals</div>
                 <div class="skill">Raspberry Pi</div>
                 <div class="skill">Automation</div>
@@ -205,7 +205,7 @@
                 ▸ Building experimental AI systems with persistent memory<br>
                 ▸ Developing immersive simulation environments<br>
                 ▸ Creating efficient and autonomous computing setups<br>
-                ▸ Exploring system-level optimization and hybrid architectures
+                ▸ Exploring system‑level optimization and hybrid architectures
             </p>
         </div>
 
@@ -214,8 +214,24 @@
             <p>
                 "Understand the system. Control the system. Become the system."
                 <br><br>
-                Every layer is an opportunity — from hardware signals to high-level intelligence.
+                Every layer is an opportunity — from hardware signals to high‑level intelligence.
             </p>
+        </div>
+
+    </div>
+
+    <div class="section">
+
+        <div class="card">
+            <div class="title">// network</div>
+            <div class="skills">
+                <a href="https://github.com" target="_blank" class="skill" style="text-decoration:none;">GitHub</a>
+                <a href="https://discord.gg" target="_blank" class="skill" style="text-decoration:none;">Discord</a>
+                <a href="https://instagram.com" target="_blank" class="skill" style="text-decoration:none;">Instagram</a>
+                <a href="https://open.spotify.com" target="_blank" class="skill" style="text-decoration:none;">Spotify</a>
+                <a href="https://steamcommunity.com" target="_blank" class="skill" style="text-decoration:none;">Steam</a>
+                <a href="https://linktr.ee/BrianGunar" target="_blank" class="skill" style="text-decoration:none; border-color: var(--accent); color: var(--accent);">Full Linktree</a>
+            </div>
         </div>
 
     </div>
